Start getting data from flask api

--- a/deauth-monitor-web/deauth-web-ui/package.json
+++ b/deauth-monitor-web/deauth-web-ui/package.json
@@ -4,6 +4,7 @@
   "description": "Material Dashboard React. Coded by Creative Tim",
   "private": false,
   "main": "dist/index.js",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "4.3.2",
     "@material-ui/icons": "4.2.1",
