--- a/deauth-monitor-web/deauth-web-ui/package.json
+++ b/deauth-monitor-web/deauth-web-ui/package.json
@@ -12,6 +12,7 @@
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "history": "4.9.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "perfect-scrollbar": "1.4.0",
     "prop-types": "15.7.2",
